// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Text prop "children" 1`] = `
<span
  class="rn-ui-text-1ntzlq4 rn-ui-textHasAncestor-z2plr"
  data-testid="child"
  dir="auto"
/>
`;

exports[`components/Text prop "onPress" 1`] = `
<div
  className="rn-ui-text-1ntzlq4 rn-ui-textIsRoot-gw3a6r rn-cursor-1loqt21"
  data-focusable={true}
  dir="auto"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
/>
`;

exports[`components/Text prop "selectable" 1`] = `
<div
  className="rn-ui-text-1ntzlq4 rn-ui-textIsRoot-gw3a6r"
  dir="auto"
/>
`;

exports[`components/Text prop "selectable" 2`] = `
<div
  className="rn-ui-text-1ntzlq4 rn-ui-textIsRoot-gw3a6r rn-userSelect-lrvibr"
  dir="auto"
/>
`;
